--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to HyG's Blog!</h1>
-        <small>这里记录着我的前端学习之路</small>
+        <h1>Welcome to Yayun Liu's Blog!</h1>
+        <small>Welcome to my personal blog! Here, I share my study notes, personal journals, and reflections on a variety of topics that interest me. As someone who loves writing and exploring new ideas, this platform has become an outlet for my creativity and a way for me to connect with readers who share similar passions. My hope is that my posts will inspire you to learn, question, and grow alongside me.</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
